# rag_deployment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-airflow.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.sh
.github/workflows/: ci-cd.yml
config/: config.yaml
dags/: rag_pipeline_dag.py
data/embeddings/: document_embeddings.npy  document_index.json
monitoring/: prometheus.yml
src/: embedder.py  generator.py  pipeline.py  retriever.py
tests/: test_embedder.py  test_retriever.py
